RESOLVED FIXED 202474
Provisional / scheduled loads in subframes should not prevent a page from entering the back/forward cache
https://bugs.webkit.org/show_bug.cgi?id=202474
Summary Provisional / scheduled loads in subframes should not prevent a page from ent...
Chris Dumez
Reported 2019-10-02 09:23:42 PDT
Provisional / scheduled loads in subframes should not prevent a page from entering the back/forward cache.
Attachments
Patch (8.04 KB, patch)
2019-10-02 09:31 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-10-02 09:31:05 PDT
Chris Dumez
Comment 2 2019-10-03 14:03:24 PDT
Patch is ready for review.
WebKit Commit Bot
Comment 3 2019-10-03 15:16:53 PDT
Comment on attachment 380030 [details] Patch Clearing flags on attachment: 380030 Committed r250686: <https://trac.webkit.org/changeset/250686>
WebKit Commit Bot
Comment 4 2019-10-03 15:16:55 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-10-03 15:17:17 PDT
Note You need to log in before you can comment on or make changes to this bug.