Provisional / scheduled loads in subframes should not prevent a page from entering the back/forward cache https://bugs.webkit.org/show_bug.cgi?id=202474

Reviewed by Alex Christensen.

Source/WebCore:

Provisional / scheduled loads in subframes should not prevent a page from entering the back/forward cache.
To address the issue, we now make sure to stop all loads before checking for PageCache eligibility.

Test: fast/history/page-cache-quick-redirect-iframe.html

* history/PageCache.cpp:
(WebCore::PageCache::addIfCacheable):
* loader/FrameLoader.cpp:
(WebCore::FrameLoader::stopForPageCache):
* loader/FrameLoader.h:

LayoutTests:

Add layout test coverage.

* fast/history/page-cache-subframes-with-provisional-load-expected.txt: Added.
* fast/history/page-cache-subframes-with-provisional-load.html: Added.


Canonical link: https://commits.webkit.org/216033@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250686 268f45cc-cd09-0410-ab3c-d52691b4dbfc